started with the design of the app

--- a/server/views/design.ejs
+++ b/server/views/design.ejs
@@ -1,5 +1,9 @@
 <%- include('./components/head.ejs') %>
 <main>
-    <p>Hallo</p>
+    <section>
+        <%- include('./components/leaderboard.ejs') %>
+        <%- include('./components/game.ejs') %>
+    </section>
+<%- include('./components/chat.ejs') %>
 </main>
 <%- include('./components/footer.ejs') %>
