--- a/server/views/components/head.ejs
+++ b/server/views/components/head.ejs
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="/dist/reset.css" />
+    <link rel="stylesheet" href="/dist/styles.css" />
     <title>RTW</title>
 </head>
 <body>
+    <header>
+        <h1>Waar is het warmer?</h1>
+        <button>Verlaat spel</button>
+    </header>
