--- a/server/src/css/chat.css
+++ b/server/src/css/chat.css
@@ -1,39 +1,37 @@
 input {
   width: calc(100% - 20px);
-  /* border: none; */
   padding: 10px;
   border-radius: 8px;
 }
 #chat-form button {
-  padding: 15px 30px;
-  background: #ececec;
-  color: black;
+  padding: 7px 16px;
+  background: #90ccf4;
+  color: #000;
   border-radius: 10px;
-  text-transform: uppercase;
-  font-weight: 700;
   transition: transform 0.2s ease-in-out;
   cursor: pointer;
-}
-#chat-form button:hover {
-  background: #90ccf4;
-  transform: scale(1.1);
-}
-#chat-form {
-  display: flex;
-}
-#chat-form button {
+  font-size: small;
   display: flex;
   justify-content: center;
   align-items: center;
+  border: solid #90ccf4;
+}
+#chat-form button span {
+  padding-left: 4px;
+  font-size: medium;
+}
+#chat-form {
+  display: flex;
 }
 .chat-messages {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  overflow: scroll;
 }
 .message {
   padding: 15px;
-  background: red;
+  background: #90ccf4;
   margin-bottom: 15px;
   width: fit-content;
 }
@@ -43,4 +41,19 @@ input {
 }
 .message-other-user {
   border-radius: 10px 10px 0 10px;
+}
+.username {
+  font-weight: 500;
+}
+.time {
+  font-size: small;
+  color: white;
+  padding-left: 70px;
+}
+.message p {
+  padding-top: 10px;
+}
+#msg {
+  border: solid var(--accent-color);
+  margin-right: 50px;
 }
