--- a/server/src/css/game.css
+++ b/server/src/css/game.css
@@ -19,7 +19,7 @@
   font-size: large;
 }
 .game div {
-  background: #f3d250;
+  background: var(--primary-color);
   padding: 40px 35px;
   display: inline-block;
   border-radius: 10px;
@@ -27,6 +27,6 @@
   cursor: pointer;
 }
 .game div:hover {
-  box-shadow: 0px 0px 123px -9px rgba(0, 0, 0, 0.75);
+  box-shadow: 0 0 45px -9px rgba(0, 0, 0, 0.75);
   transform: scale(1.05);
 }
