--- a/server/src/css/global.css
+++ b/server/src/css/global.css
@@ -14,6 +14,7 @@ header {
 }
 main > section:first-of-type {
   display: flex;
+  border-bottom: solid 0.3px var(--neutral-grey);
 }
 .leaderboard {
   padding: 15px;
