--- a/server/views/components/chat.ejs
+++ b/server/views/components/chat.ejs
@@ -1,13 +1,13 @@
 <section class="chat">
    <div class="chat-messages">
        <div class="message message-user">
-           <span>Name</span>
-           <span>Time</span>
+           <span class="username">Name</span>
+           <span class="time">Time</span>
            <p>Some text.</p>
        </div>
        <div class="message message-other-user">
-           <span>Name</span>
-           <span>Time</span>
+           <span class="username">Name</span>
+           <span class="time">Time</span>
            <p>Some text.</p>
        </div>
    </div>
