--- a/server/src/css/game.css
+++ b/server/src/css/game.css
@@ -1,15 +1,16 @@
 .game {
-  display: flex;
   width: 80%;
-  /* border: solid 1px black; */
+}
+.game form {
+  display: flex;
   justify-content: space-around;
   align-items: center;
 }
 .game img {
   width: 300px;
 }
-.game div h2,
-.game div h3 {
+.game label h2,
+.game label h3 {
   padding-top: 20px;
 }
 .country {
@@ -18,7 +19,7 @@
 .city {
   font-size: large;
 }
-.game div {
+.game label {
   background: var(--primary-color);
   padding: 40px 35px;
   display: inline-block;
@@ -26,7 +27,14 @@
   transition: all 0.5s ease-in-out;
   cursor: pointer;
 }
-.game div:hover {
+.game label:hover {
   box-shadow: 0 0 45px -9px rgba(0, 0, 0, 0.75);
   transform: scale(1.05);
+}
+input[type='radio'] {
+  position: absolute;
+  left: -100vw;
+}
+input[type='radio']:checked + label {
+  background: var(--dark-accent);
 }
