--- a/server/views/components/footer.ejs
+++ b/server/views/components/footer.ejs
@@ -1,4 +1,5 @@
 <footer><p>foorter</p></footer>
+<script src="/socket.io/socket.io.js"></script>
 <script src="dist/all.js"></script>
 </body>
 </html>
