--- a/server/views/home.ejs
+++ b/server/views/home.ejs
@@ -1,49 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
-      integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk="
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="/css/global.css" />
-    <title>ChatCord App</title>
-  </head>
-  <body>
-    <div class="join-container">
-      <header class="join-header">
-        <h1><i class="fas fa-smile"></i> ChatCord</h1>
-      </header>
-      <main class="join-main">
-        <form action="/chat">
-          <div class="form-control">
-            <label for="username">Username</label>
-            <input
-              type="text"
-              name="username"
-              id="username"
-              placeholder="Enter username..."
-              required
-            />
-          </div>
-          <div class="form-control">
-            <label for="room">Room</label>
-            <select name="room" id="room">
-              <option value="JavaScript">JavaScript</option>
-              <option value="Python">Python</option>
-              <option value="PHP">PHP</option>
-              <option value="C#">C#</option>
-              <option value="Ruby">Ruby</option>
-              <option value="Java">Java</option>
-            </select>
-          </div>
-          <button type="submit" class="btn">Join Chat</button>
-        </form>
-      </main>
-    </div>
-  </body>
+<html lang="nl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/front.css">
+    <title>RRTW</title>
+</head>
+<body>
+    <div class="container">
+        <header><h1>Waar is het warmer?</h1></header>
+        <main>
+            <form action="/chat">
+                <fieldset>
+                    <label for="username">Naam</label>
+                    <input type="text" name="username" id="username" placeholder="Je naam..." required>
+                </fieldset>
+                <fieldset>
+                    <label for="room">Room</label>
+                    <input type="text" name="room" id="room" list="room_list" placeholder="Kies je game..." required autocomplete="false">
+                </fieldset>
+                <datalist id="room_list">
+                    <option value="game1">game1</option>
+                    <option value="game2">game2</option>
+                    <option value="game3">game3</option>
+                </datalist>
+                <button type="submit">Join</button>
+            </form>
+        </main>
+    </div>  
+</body>
 </html>
