--- a/server/views/components/game.ejs
+++ b/server/views/components/game.ejs
@@ -1,18 +1,22 @@
 <section class="game">
-    <form action="" method="GET">    
-    <input type="radio" name="answer" id="cityone">
-    <label for="cityone">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Flag_of_the_Netherlands.svg" alt="">
-        <h2 class="country"><%= questions.questionone.cityone.country %></h2>
-        <h3 class="city"><%= questions.questionone.cityone.city %></h3>
-    </label>
-    <input type="radio" name="answer" id="citytwo">
-    <label for="citytwo">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Flag_of_the_Netherlands.svg" alt="">
-        <h2 class="country"><%= questions.questionone.citytwo.country %></h2>
-        <h3 class="city"><%= questions.questionone.citytwo.city %></h3>
-    </label>
-    <!-- <input type="submit" value="sub"> -->
+    <form action="" method="GET" id="answer-form">   
+        <div>
+            <input type="text" hidden value="<%= username  %> " name="username">
+            <input type="text" hidden value="<%= room  %> " name="room">
+            <input type="radio" name="answer" id="cityone">
+            <label for="cityone">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Flag_of_the_Netherlands.svg" alt="">
+                <h2 class="country"><%= questions.questionone.cityone.country %></h2>
+                <h3 class="city"><%= questions.questionone.cityone.city %></h3>
+            </label>
+            <input type="radio" name="answer" id="citytwo">
+            <label for="citytwo">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Flag_of_the_Netherlands.svg" alt="">
+                <h2 class="country"><%= questions.questionone.citytwo.country %></h2>
+                <h3 class="city"><%= questions.questionone.citytwo.city %></h3>
+            </label>
+    </div> 
+    <input type="submit" value="Bevestig antwoord">
     <!-- TODO: submit answer with username and room -->
 </form>
 </section>
