--- a/server/src/css/chat.css
+++ b/server/src/css/chat.css
@@ -3,6 +3,11 @@ input {
   padding: 10px;
   border-radius: 8px;
 }
+.chat {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 #chat-form button {
   padding: 7px 16px;
   background: #90ccf4;
@@ -26,9 +31,7 @@ input {
 .chat-messages {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
-  overflow: scroll;
-  height: 19vh;
+  max-height: 74vh;
   overflow: scroll;
 }
 .message {
@@ -43,7 +46,6 @@ input {
 }
 .message-user {
   border-radius: 10px 10px 10px 0;
-  align-self: flex-start;
 }
 .message-other-user {
   border-radius: 10px 10px 0 10px;
