--- a/server/views/components/chat.ejs
+++ b/server/views/components/chat.ejs
@@ -1,5 +1,22 @@
 <section class="chat">
    <div class="chat-messages">
+    <form action="" method="GET" id="answer-form">  
+        <input type="text" hidden value="<%= username  %> " name="username">
+        <input type="text" hidden value="<%= room  %> " name="room">
+        <input type="radio" name="answer" id="cityone">
+        <label for="cityone">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Flag_of_the_Netherlands.svg" alt="">
+            <h2 class="country">Nederland</h2>
+            <h3 class="city">Amsterdam</h3>
+        </label>
+        <input type="radio" name="answer" id="citytwo">
+        <label for="citytwo">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Flag_of_the_Netherlands.svg" alt="">
+            <h2 class="country">Verenigd Koninkrijk</h2>
+            <h3 class="city">Londen</h3>
+        </label>
+        <input class="question_submit" type="submit" value="Bevestig antwoord">
+        </form>
    </div>
    <div class="chat-form-container">
        <form id="chat-form">
