--- a/server/views/components/head.ejs
+++ b/server/views/components/head.ejs
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="/dist/reset.css" />
     <link rel="stylesheet" href="/dist/styles.css" />
     <title>RTW</title>
 </head>
 <body>
     <header>
         <h1>Waar is het warmer?</h1>
+        <form action="" method="GET" id="newQuestionForm">
+            <input type="text" hidden value="<%= username  %> " name="username">
+            <input type="text" hidden value="<%= room  %> " name="room">
+            <input type="submit" value="New question">
+        </form>
         <button>Verlaat spel</button>
     </header>
