added question render when new question is pressed

--- a/server/src/css/chat.css
+++ b/server/src/css/chat.css
@@ -40,7 +40,8 @@ input {
   margin-bottom: 15px;
   width: fit-content;
 }
-.message div {
+.message div,
+label div {
   display: flex;
   justify-content: space-between;
 }
