--- a/server/views/components/head.ejs
+++ b/server/views/components/head.ejs
@@ -14,7 +14,7 @@
         <form action="" method="GET" id="newQuestionForm">
             <input type="text" hidden value="<%= username  %> " name="username">
             <input type="text" hidden value="<%= room  %> " name="room">
-            <input type="submit" value="New question">
+            <input id="newQuestionForm_submit" type="submit" value="New question">
         </form>
         <button>Verlaat spel</button>
     </header>
