--- a/server/views/home.ejs
+++ b/server/views/home.ejs
@@ -21,9 +21,9 @@
                     <input type="text" name="room" id="room" list="room_list" placeholder="Kies je game..." required autocomplete="false">
                 </fieldset>
                 <datalist id="room_list">
-                    <option value="game1">game1</option>
-                    <option value="game2">game2</option>
-                    <option value="game3">game3</option>
+                    <option value="Room 1">Room 1</option>
+                    <option value="Room 2">Room 2</option>
+                    <option value="Room 3">Room 3</option>
                 </datalist>
                 <button type="submit">Join</button>
             </form>
