--- a/server/src/css/game.css
+++ b/server/src/css/game.css
@@ -1,7 +1,7 @@
 .questionForms {
   display: flex;
-  flex-direction: column;
   align-items: flex-start;
+  justify-content: space-between;
 }
 .questionForms img {
   width: 300px;
