--- a/server/views/components/chat.ejs
+++ b/server/views/components/chat.ejs
@@ -1,39 +1,5 @@
 <section class="chat">
-   <div class="chat-messages">
-<!-- <div>
-    <form action="" method="GET" id="answer-form">  
-        <input type="text" hidden value="<%= username  %> " name="username">
-        <input type="text" hidden value="<%= room  %> " name="room">
-        <input type="radio" name="answer" id="cityone">
-        <label for="cityone">
-            <div>
-                <span class="username">Weerman</span>
-                <span class="time">12:00</span>
-            </div>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Flag_of_the_Netherlands.svg" alt="">
-            <h2 class="country">Nederland</h2>
-            <h3 class="city">Amsterdam</h3>
-        </label>
-        <input type="radio" name="answer" id="citytwo">
-        <label for="citytwo">
-            <div>
-                <span class="username">Weerman</span>
-                <span class="time">12:01</span>
-            </div>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Flag_of_the_Netherlands.svg" alt="">
-            <h2 class="country">Verenigd Koninkrijk</h2>
-            <h3 class="city">Londen</h3>
-        </label>
-        <button type="submit" class="question_submit">
-            <div>
-                <span class="username">Weerman</span>
-                <span class="time">12:01</span>
-            </div>
-            <p>Bevestig antwoord</p>
-        </button>
-        </form>
-    </div> -->
-   </div>
+   <div class="chat-messages"> </div>
    <div class="chat-form-container">
        <form id="chat-form">
            <input type="text" id="msg" placeholder="Enter Message" autocomplete="off">
