--- a/server/views/components/head.ejs
+++ b/server/views/components/head.ejs
@@ -14,7 +14,7 @@
         <form action="" method="GET" id="newQuestionForm">
             <input type="text" hidden value="<%= username  %> " name="username">
             <input type="text" hidden value="<%= room  %> " name="room">
-            <input id="newQuestionForm_submit" type="submit" value="New question">
+            <button id="newQuestionForm_submit" type="submit">Nieuwe vraag<span class="material-icons"> add </span></button>
         </form>
-        <button>Verlaat spel</button>
+        <a class="btn" href="/">Verlaat spel<span class="material-icons"> exit_to_app </span></a>
     </header>
