--- a/server/views/components/footer.ejs
+++ b/server/views/components/footer.ejs
@@ -1,4 +1,4 @@
-<footer><p>Real Time Web 2020 - Marten de Bruijn</p></footer>
+<footer><p>Real Time Web 2020 - <span> Marten de Bruijn </span></p></footer>
 <script src="/socket.io/socket.io.js"></script>
 <script src="dist/all.js"></script>
 </body>
