--- a/server/views/components/head.ejs
+++ b/server/views/components/head.ejs
@@ -14,7 +14,7 @@
         <form action="" method="GET" id="newQuestionForm">
             <input type="text" hidden value="<%= username  %> " name="username">
             <input type="text" hidden value="<%= room  %> " name="room">
-            <button id="newQuestionForm_submit" type="submit">Nieuwe vraag<span class="material-icons"> add </span></button>
+            <button id="newQuestionForm_submit" type="submit"><span class="desktop">Nieuwe vraag</span><span class="mobile">Vraag</span><span class="material-icons"> add </span></button>
         </form>
-        <a class="btn" href="/">Verlaat spel<span class="material-icons"> exit_to_app </span></a>
+        <a class="btn" href="/"><span>Verlaat spel</span><span class="material-icons"> exit_to_app </span></a>
     </header>
