--- a/server/src/css/front.css
+++ b/server/src/css/front.css
@@ -41,7 +41,7 @@ button[type='submit'] {
   border: none;
   padding: 15px 30px;
   background: #ececec;
-  color: black;
+  color: var(--text-color);
   border-radius: 10px;
   text-transform: uppercase;
   font-weight: 700;
