better dark mode

--- a/server/src/css/game.css
+++ b/server/src/css/game.css
@@ -1,3 +1,4 @@
+/* TODO: add padding to the header of the game -> "weerman ... 19:49" */
 .questionForms {
   display: flex;
   align-items: flex-start;
