--- a/server/src/css/themes/dark.css
+++ b/server/src/css/themes/dark.css
@@ -1,6 +1,6 @@
 @media (prefers-color-scheme: dark) {
   :root {
-    --primary-color: #747474;
+    --primary-color: #ffe400;
     --accent-color: #14a76c;
     --neutral-grey: #272727;
     --dark-accent: #18405f;
@@ -12,5 +12,11 @@
   .btn,
   button {
     color: var(--secondary-text-color) !important;
+  }
+  .chat {
+    background: #747474;
+  }
+  label {
+    color: var(--neutral-grey);
   }
 }
