--- a/server/views/home.ejs
+++ b/server/views/home.ejs
@@ -29,5 +29,12 @@
             </form>
         </main>
     </div>  
+    <script>
+        if('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/serviceWorker.js')
+      .then((reg) => console.log('service worker registered', reg))
+      .catch((err) => console.log('service worker NOT registered', err))
+  }
+  </script>
 </body>
 </html>
