--- a/server/views/home.ejs
+++ b/server/views/home.ejs
@@ -31,7 +31,7 @@
     </div>  
     <script>
         if('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/serviceWorker.js')
+      navigator.serviceWorker.register('/sw.js')
       .then((reg) => console.log('service worker registered', reg))
       .catch((err) => console.log('service worker NOT registered', err))
   }
