--- a/server/views/home.ejs
+++ b/server/views/home.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="manifest" href="./manifest.json">
     <link rel="stylesheet" href="dist/front.css">
     <title>RRTW</title>
 </head>
@@ -31,10 +32,10 @@
     </div>  
     <script>
         if('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/sw.js')
-      .then((reg) => console.log('service worker registered', reg))
-      .catch((err) => console.log('service worker NOT registered', err))
-  }
-  </script>
+            navigator.serviceWorker.register('/sw.js')
+            .then((reg) => console.log('service worker registered', reg))
+            .catch((err) => console.log('service worker NOT registered', err))
+        }
+    </script>
 </body>
 </html>
