--- a/server/src/css/game.css
+++ b/server/src/css/game.css
@@ -1,6 +1,7 @@
 /* TODO: add padding to the header of the game -> "weerman ... 19:49" */
 .questionForms {
   display: flex;
+  flex-direction: column;
   align-items: flex-start;
   justify-content: space-between;
 }
